<resources>
    <string name="app_name" translatable="false">MiaoWu</string>
    <string name="course_intro">编程语言层出不穷，能以不变应万变的奥秘就是“编程之魂”。本课程将高中生学习编程前应该了解的那些事儿，从具体的编程语言中剥离出来，取其灵魂，聚焦于程序审计思维的建立，不讲编程语言，只讲编程思想和方法，不写代码，也能运行“程序”。</string>
    <string name="coach_intro">男，1964年12月出生，湖北随州人，汉族。研究生学历，博士学位，副教授职称。现任哈尔滨工业大学经济与管理系主任，博士生导师……</string>
    <string name="coach_name">张三</string>
    <string name="coach_org">副教授 | 哈尔滨工业大学</string>
    <string name="org_intro">哈尔滨工业大学（Harbin Insitute of Technology），简称哈工大，是首批中央直属管理、工业和信息化部直属的全国重点大学，由工信部、教育部、黑龙江省……</string>
    <string name="hgd">哈尔滨工业大学</string>
    <string name="course">课程</string>
    <string name="coach">讲师</string>
    <string name="course_name">课程名称</string>
    <string name="org_name">机构名称</string>
    <string name="course_starttime">开课时间</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password2">请确认密码</string>
    <string name="tab_email">邮箱注册</string>
    <string name="tab_phone">手机注册</string>
    <string name="hint_keyword">请输入用户名/邮箱/手机号</string>
    <string name="btn_reg">注册</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="argument">用户注册即代表同意《服务条款》和《用户隐私政策》</string>
    <string name="btn_login">登录</string>
    <string name="hint_emailOrPhone">请输入邮箱或手机号</string>
    <string name="my_question">我的问题</string>
    <string name="my_course">我的课表</string>
    <string name="my_note">我的笔记</string>
    <string name="my_course2">我的课程</string>
    <string name="my_course3">TA的课程</string>
    <string name="my_message">动态</string>
    <string name="my_friend">粉丝</string>
    <string name="my_follow">关注</string>
    <string name="my_signal">签名：好好学习，天天向上</string>
    <string name="my_name">Alexandra</string>
    <string name="my_title">个人中心</string>
    <string name="birthday">生日</string>
    <string name="hint_profession">学生</string>
    <string name="signal">签名</string>
    <string name="hint_username">用户名</string>
    <string name="hint_attestation">已认证</string>
    <string name="hint_unattestation">未认证</string>
    <string name="attestation_roll">学籍认证</string>
    <string name="attestation">实名认证</string>
    <string name="modify_password">修改密码</string>
    <string name="email">绑定邮箱</string>
    <string name="phone">手机</string>
    <string name="address">地区</string>
    <string name="nickname">昵称</string>
    <string name="sign">好好学习，天天向上</string>
    <string name="hint_address">福建省厦门市</string>
    <string name="profile_detail">详细信息</string>
    <string name="course_number">参加人数：66</string>
    <string name="hint_order">预约课程</string>
    <string name="hint_org_title">哈尔滨工业大学</string>
    <string name="hint_org_title2">麻雀理工大学</string>
    <string name="hint_course_title">CSS入门教程</string>
    <string name="intro">简介</string>
    <string name="coach2">授课老师</string>
    <string name="hint_org">哈尔滨工业大学</string>
    <string name="org">授课机构</string>
    <string name="hint_profession2">讲师</string>
    <string name="hint_coach_name">张三</string>
    <string name="hint_price">价格：2000元</string>
    <string name="price">价格：%.2f元</string>
    <string name="hint_search">输入查询关键字</string>
    <string name="user">用户</string>
    <string name="org2">机构</string>
    <string name="hint_follow">关注</string>
    <string name="course_recommend">推荐课程</string>
    <string name="org_address">这里是机构的详细地址</string>
    <string name="hint_unfollow">已关注</string>
    <string name="hint_follow_each">互相关注</string>
    <string name="btn_cancel">取消</string>
    <string name="organization_recommend">推荐机构</string>
    <string name="hint_date">开课时间:%1$s 至 %2$s</string>
    <string name="hint_number">参加人数:%1$d / %2$d</string>
    <string name="hint_icon">头像</string>
    <string name="btn_loginout">退出登录</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="longtext">public class BottomNavigationViewBehavior extends CoordinatorLayout.Behavior {

    public BottomNavigationViewBehavior() {

    }

    public BottomNavigationViewBehavior(Context context, AttributeSet attrs) {

        super(context, attrs);
    }

    @Override
    public boolean onLayoutChild(CoordinatorLayout parent, View child, int layoutDirection) {

        ((CoordinatorLayout.LayoutParams) child.getLayoutParams()).topMargin = parent.getMeasuredHeight() - child.getMeasuredHeight();
        return super.onLayoutChild(parent, child, layoutDirection);
    }

    @Override
    public boolean layoutDependsOn(CoordinatorLayout parent, View child, View dependency) {

        //因为Behavior只对CoordinatorLayout的直接子View生效，因此将依赖关系转移到AppBarLayout
        return dependency instanceof AppBarLayout;
    }

    @Override
    public boolean onDependentViewChanged(CoordinatorLayout parent, View child, View dependency) {

        //得到依赖View的滑动距离
        int top = ((AppBarLayout.Behavior)((CoordinatorLayout.LayoutParams)dependency.getLayoutParams()).getBehavior()).getTopAndBottomOffset();
        //因为BottomNavigation的滑动与ToolBar是反向的，所以取-top值
        ViewCompat.setTranslationY(child, -top);
        return false;
    }
}</string>
    <string-array name="contacts">
        <item>请选择联系方式</item>
        <item>电话</item>
        <item>QQ</item>
        <item>微信</item>
        <item>邮箱</item>
    </string-array>
    <string-array name="ages">
        <item>未知</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="sexs">
        <item>未知</item>
        <item>公</item>
        <item>母</item>
    </string-array>
    <string-array name="options">
        <item>未知</item>
        <item>是</item>
        <item>否</item>
    </string-array>
    <string name="more_note">查看所有帖子 >></string>
    <string name="title_reply">帖子回复</string>
    <string name="empty_reply">暂无评论，快来抢沙发</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="reply">回复</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="neutering">是否绝育</string>
    <string name="insecticide">是否驱虫</string>
    <string name="otherCondition">领养条件：</string>
    <string name="contact">联系方式</string>
    <string name="hint_conditions">请填写领养条件</string>
    <string name="type">品种</string>
    <string name="hint_notification_content">这是通知的内容啦啦啦啦啦啦啦啦啦，这是通知的内容啦啦啦啦啦啦啦啦啦，这是通知的内容啦啦啦啦啦啦啦啦啦，这是通知的内容啦啦啦啦啦啦啦啦啦，这是通知的内容啦啦啦啦啦啦啦啦啦，这是通知的内容啦啦啦啦啦啦啦啦啦，</string>
    <string name="hint_my_note">我的帖子</string>
    <string name="hint_my_reply">我的回复</string>
    <string name="hint_empty">什么都没有</string>
    <string name="my_notecount">帖子</string>
    <string name="note_verify">帖子审核</string>
</resources>
