<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:elevation="2dp"
                                    app:cardElevation="2dp">

<LinearLayout  android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
               android:divider="@drawable/divider"
               android:showDividers="middle"
    >
    <TextView
        android:id="@+id/tv_title_reply"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="猫咪信息"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/sex"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/age"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/neutering"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_neutering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/insecticide"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_insecticide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/type"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/contact"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_contacttype"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:paddingLeft="8dp"
            android:text="@string/otherCondition"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/tv_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

    </LinearLayout>


</LinearLayout>
    </android.support.v7.widget.CardView>